--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         <div>
                           <h3 class="qualification_title">Senior High School</h3>
                           <span class="qualification_subtitle"><a href="#" target="_blank"
-                              rel="noopener noreferrer">Lyceum internation school</a></span>
+                              rel="noopener noreferrer">Lyceum international school</a></span>
                               <div class="qualification_grade"> 73.4 %</div>
                           <div class="qualification_calendar">
                             <i class="uil uil-calendar-alt"></i>
