--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     
                     <!-- Project 2 -->
                     <div class="portfolio_content grid swiper-slide">
-                      <img src="assets/img/Portfolio.jpg" alt="" class="portfolio_img">
+                      <img src="assets/img/Portfolio.png" alt="" class="portfolio_img">
           
                       <!-- <div class="portfolio_data">
                         <h3 class="portfolio_title">
