--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           
                 <div class="contact_container container grid">
                   <div>
-                    <a href="mailto:rkathayat1103@gmail.com" target="_blank">
+                    <a href="mailto:abhishekkumarit6@gmail.com" target="_blank">
                       <div class="contact_info">
                         <i class="uil uil-envelope-alt contact_icon"></i>
                         <div>
