--- a/index.html
+++ b/index.html
@@ -670,11 +670,11 @@
                 </ul>
         
                 <div class="footer_socials">
-                  <a href="https://github.com/|Abhi00705" target="_blank" class="footer_social">
+                  <a href="https://github.com/|Abhi00705/" target="_blank" class="footer_social">
                     <i class="uil uil-github"></i>
                   </a>
                  
-                  <a href="www.linkedin.com/in/abhishek-kumar-557657201" target="_blank" class="footer_social">
+                  <a href="www.linkedin.com/in/abhishek-kumar-557657201/" target="_blank" class="footer_social">
                     <i class="uil uil-linkedin"></i>
                   </a>
                 </div>
