--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 </ul>
         
                 <div class="footer_socials">
-                  <a href="https://github.com/|Abhi00705/" target="_blank" class="footer_social">
+                  <a href="https://github.com/Abhi00705/" target="_blank" class="footer_social">
                     <i class="uil uil-github"></i>
                   </a>
                  
