--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                     <i class="uil uil-github"></i>
                   </a>
                  
-                  <a href="www.linkedin.com/in/abhishek-kumar-557657201/" target="_blank" class="footer_social">
+                  <a href="https://www.linkedin.com/in/abhishek-kumar-557657201/" target="_blank" class="footer_social">
                     <i class="uil uil-linkedin"></i>
                   </a>
                 </div>
