--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="home_container container grid">
                     <div class="home_content grid">
                         <div class="home_social">
-                            <a href="www.linkedin.com/in/abhishek-kumar-557657201" target="_blank" class="home_social-icon">
+                            <a href="https://www.linkedin.com/in/abhishek-kumar-557657201" target="_blank" class="home_social-icon">
                                 <i class="uil uil-linkedin"></i>
                             </a>
                             <a href="https://github.com/Abhi00705" target="_blank" class="home_social-icon">
@@ -674,7 +674,7 @@
                     <i class="uil uil-github"></i>
                   </a>
                  
-                  <a href="https://www.linkedin.com/in/vishal-rathore-488246220" target="_blank" class="footer_social">
+                  <a href="https://www.linkedin.com/in/abhishek-kumar-557657201" target="_blank" class="footer_social">
                     <i class="uil uil-linkedin"></i>
                   </a>
                 </div>
