--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         <p class="portfolio_description">
                           I created a React-based food ordering app UI with real-time cart management, featuring a content-driven design using Swiggy API.
                         </p>
-                        <a href="https://hungryhubsid18.netlify.app/" class="button button--flex button-small portfolio_button"
+                        <a href="https://idyllic-toffee-2998dc.netlify.app/" class="button button--flex button-small portfolio_button"
                           target="_blank">
                           Check out
                           <i class="uil uil-arrow-right button_icon"></i>
