--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           
                     <!-- Project 1 -->
                     <div class="portfolio_content grid swiper-slide">
-                      <img src="./assets/img/HungerHub.jpg" alt="daral marefa" class="portfolio_img">
+                      <img src="./assets/img/HungerHub.png" alt="daral marefa" class="portfolio_img">
           
                       <div class="portfolio_data">
                         <h3 class="portfolio_title">
